# InSummery-AI

./: .env.example  .firebaserc  .gitignore  README.md  TODO.md  firebase.json  implementation_plan.md  kaggle_course_summary.md  pyproject.toml
.agents/: AGENTS.md
.cursor/rules/: local-dev-gotchas.mdc
.firebase/: hosting.ZnJvbnRlbmRcZGlzdA.cache
.github/workflows/: deploy.yml  firebase-hosting-pull-request.yml
app/: __init__.py  agent.py  agent_factories.py  cli.py  matrix_logic.py  mcp_server.py  model_client.py  nodes.py  pii_masker.py  schemas.py  storage.py  telemetry.py  ui_generator.py  weave_monitors.py  weave_observability.py  workflow_trace.py
app/evaluation/: __init__.py  baseline.py  cli.py  hitl_dataset.py  runner.py  scoring.py  weave_publish.py  workflow.py
config/: profile.json
data/: matrix.json
frontend/: .env.production  app.js  index.css  index.html  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sun-icon-preview.html
frontend/scripts/: generate-icons.py
frontend/src/: App.jsx  api.js  firebase.js  index.css  main.jsx  timeUtils.js
frontend/src/components/: AlertsSidebar.jsx  AuthView.jsx  BrandLogo.jsx  Dashboard.jsx  DeleteActivityModal.jsx  FamilyFormRows.jsx  HitlModal.jsx  MatrixGrid.jsx  OnboardingView.jsx  ProfileModal.jsx  SunIcon.jsx
frontend/src/demo/: demoData.js  demoStore.js
functions/: main.py  requirements.txt
insummery_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
output/: schedule.html
scratch/: demo_telemetry.py
tests/: conftest.py
tests/eval/: README.md  eval_config.yaml  run_eval.py  test_extraction_eval.py
tests/eval/baselines/: baseline_gemini_gemini-2.5-flash.json
tests/eval/datasets/: interpreter_disruption_cases.json  triager_cases.json
tests/test_cases/: README.md  case_01_emily_soccer.txt  case_01_pat_soccer.txt  case_02_jack_robotics.txt  case_02_sam_robotics.txt  case_03_alex_art.txt  case_03_sophia_art.txt  case_04_jordan_wilderness.txt  case_04_liam_wilderness.txt  case_05_olivia_theater.txt  case_05_riley_theater.txt  case_06_casey_coding.txt  case_06_noah_coding.txt  case_07_emma_preschool.txt  case_07_quinn_preschool.txt  case_08_lucas_tennis.txt  case_08_morgan_tennis.txt  case_09_ava_leadership.txt  case_09_taylor_leadership.txt  case_10_ethan_basketball.txt  case_10_reese_basketball.txt  profile_10_kids.json  test_cases_manifest.json
tests/unit/: test_delete_activity.py  test_eval_harness.py  test_eval_scoring.py  test_known_cases.py  test_matrix_logic.py  test_pii_masker.py  test_storage.py  test_weave_observability.py
