[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insummery-ai"
version = "0.1.0"
description = "Summify: A concierge agent to ingest scheduling emails, maintain a schedule matrix, and sync with Google Calendar."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tyler Stahl" }
]
dependencies = [
    "google-adk>=2.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "firebase-admin>=6.0.0",
    "requests>=2.28.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[project.scripts]
summify = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
