[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insummery-ai"
version = "0.1.0"
description = "InSummery: A concierge agent to ingest scheduling emails, maintain a schedule matrix, and sync with Google Calendar."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Tyler Stahl" }
]
dependencies = [
    "google-adk[extensions]>=2.0.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "firebase-admin>=6.0.0",
    "requests>=2.28.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-google-genai>=0.7b0",
    "opentelemetry-util-genai[upload]>=0.3b0,<0.4b0",
    "gcsfs>=2024.3.0",
    "opentelemetry-exporter-gcp-trace>=1.6.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[project.scripts]
insummery = "app.cli:main"
insummery-eval = "app.evaluation.cli:main"
insummery-mcp = "app.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
